// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Command > printHelp > mixed parameters > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  prefix --help

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with \`convert-camel-to-kebab\` display case style > no ANSI color 1`] = `
"USAGE
  prefix (--alpha-flag value) (--bravo-flag value)... [--charlie-flag c] (--delta-flag) <arg1> [<arg2>]
  prefix --help

brief

FLAGS
  -a  --alpha-flag                  alpha flag brief
      --bravo-flag...               bravo flag brief
     [--charlie-flag]               charlie flag brief
  -d  --delta-flag/--no-delta-flag  delta flag brief
  -h  --help                        Print help information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with \`convert-camel-to-kebab\` display case style > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha-flag value) (--bravo-flag value)... [--charlie-flag c] (--delta-flag) <arg1> [<arg2>]
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha-flag[22m                  [03malpha flag brief[23m
  [01m[22m   [01m --bravo-flag...[22m               [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie-flag][22m               [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta-flag/--no-delta-flag[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m                        [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with \`convert-camel-to-kebab\` display case style, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alpha-flag value) (--bravo-flag value)... (--delta-flag) <arg1>
  prefix --help

brief

FLAGS
  -a  --alpha-flag                  alpha flag brief
      --bravo-flag...               bravo flag brief
     [--charlie-flag]               charlie flag brief
  -d  --delta-flag/--no-delta-flag  delta flag brief
  -h  --help                        Print help information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with \`convert-camel-to-kebab\` display case style, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha-flag value) (--bravo-flag value)... (--delta-flag) <arg1>
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha-flag[22m                  [03malpha flag brief[23m
  [01m[22m   [01m --bravo-flag...[22m               [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie-flag][22m               [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta-flag/--no-delta-flag[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m                        [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with \`original\` display case style > no ANSI color 1`] = `
"USAGE
  prefix (--alphaFlag value) (--bravoFlag value)... [--charlieFlag c] (--deltaFlag) <arg1> [<arg2>]
  prefix --help

brief

FLAGS
  -a  --alphaFlag                alpha flag brief
      --bravoFlag...             bravo flag brief
     [--charlieFlag]             charlie flag brief
  -d  --deltaFlag/--noDeltaFlag  delta flag brief
  -h  --help                     Print help information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with \`original\` display case style > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alphaFlag value) (--bravoFlag value)... [--charlieFlag c] (--deltaFlag) <arg1> [<arg2>]
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alphaFlag[22m                [03malpha flag brief[23m
  [01m[22m   [01m --bravoFlag...[22m             [03mbravo flag brief[23m
  [01m[22m   [01m[--charlieFlag][22m             [03mcharlie flag brief[23m
  [01m-d[22m [01m --deltaFlag/--noDeltaFlag[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m                     [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with \`original\` display case style, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alphaFlag value) (--bravoFlag value)... (--deltaFlag) <arg1>
  prefix --help

brief

FLAGS
  -a  --alphaFlag                alpha flag brief
      --bravoFlag...             bravo flag brief
     [--charlieFlag]             charlie flag brief
  -d  --deltaFlag/--noDeltaFlag  delta flag brief
  -h  --help                     Print help information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with \`original\` display case style, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alphaFlag value) (--bravoFlag value)... (--deltaFlag) <arg1>
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alphaFlag[22m                [03malpha flag brief[23m
  [01m[22m   [01m --bravoFlag...[22m             [03mbravo flag brief[23m
  [01m[22m   [01m[--charlieFlag][22m             [03mcharlie flag brief[23m
  [01m-d[22m [01m --deltaFlag/--noDeltaFlag[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m                     [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with aliases > no ANSI color 1`] = `
"USAGE
  cli route (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  cli route --help
  cli route --version

brief

ALIASES
  cli alias1
  cli alias2

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -v  --version          Print version information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with aliases > with ANSI color 1`] = `
"[1mUSAGE[22m
  cli route (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  cli route --help
  cli route --version

brief

[1mALIASES[22m
  cli alias1
  cli alias2

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [01m-v[22m [01m --version[22m          [03mPrint version information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with aliases, only required in usage line > no ANSI color 1`] = `
"USAGE
  cli route (--alpha value) (--bravo value)... (--delta) <arg1>
  cli route --help
  cli route --version

brief

ALIASES
  cli alias1
  cli alias2

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -v  --version          Print version information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with aliases, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  cli route (--alpha value) (--bravo value)... (--delta) <arg1>
  cli route --help
  cli route --version

brief

[1mALIASES[22m
  cli alias1
  cli alias2

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [01m-v[22m [01m --version[22m          [03mPrint version information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with custom headers > no ANSI color 1`] = `
"Usage:
  cli route (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  cli route --help
  cli route --version

brief

Aliases:
  cli alias1
  cli alias2

Flags:
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -v  --version          Print version information and exit

Arguments:
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with custom headers > with ANSI color 1`] = `
"[1mUsage:[22m
  cli route (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  cli route --help
  cli route --version

brief

[1mAliases:[22m
  cli alias1
  cli alias2

[1mFlags:[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [01m-v[22m [01m --version[22m          [03mPrint version information and exit[23m

[1mArguments:[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with custom headers, only required in usage line > no ANSI color 1`] = `
"Usage:
  cli route (--alpha value) (--bravo value)... (--delta) <arg1>
  cli route --help
  cli route --version

brief

Aliases:
  cli alias1
  cli alias2

Flags:
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -v  --version          Print version information and exit

Arguments:
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with custom headers, only required in usage line > with ANSI color 1`] = `
"[1mUsage:[22m
  cli route (--alpha value) (--bravo value)... (--delta) <arg1>
  cli route --help
  cli route --version

brief

[1mAliases:[22m
  cli alias1
  cli alias2

[1mFlags:[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [01m-v[22m [01m --version[22m          [03mPrint version information and exit[23m

[1mArguments:[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with version available > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  prefix --help
  prefix --version

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -v  --version          Print version information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with version available > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--bravo value)... [--charlie c] (--delta) <arg1> [<arg2>]
  prefix --help
  prefix --version

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [01m-v[22m [01m --version[22m          [03mPrint version information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters with version available, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--bravo value)... (--delta) <arg1>
  prefix --help
  prefix --version

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -v  --version          Print version information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters with version available, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--bravo value)... (--delta) <arg1>
  prefix --help
  prefix --version

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [01m-v[22m [01m --version[22m          [03mPrint version information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, custom usage > no ANSI color 1`] = `
"USAGE
  prefix custom usage line #1
  prefix custom usage line #2
  prefix --help

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, custom usage > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix custom usage line #1
  prefix custom usage line #2
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, enhanced custom usage > no ANSI color 1`] = `
"USAGE
  prefix -a 1
    enhanced usage line #1
  prefix -a 2 -d
    enhanced usage line #2
  prefix --help

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, enhanced custom usage > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix -a 1
    [3menhanced usage line #1[23m
  prefix -a 2 -d
    [3menhanced usage line #2[23m
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, force include hidden > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--delta) <args>...
  prefix --help

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, force include hidden > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--delta) <args>...
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [90m[39m   [90m --bravo...[39m         [90mbravo flag brief[39m
  [90m[39m   [90m[--charlie][39m         [90mcharlie flag brief[39m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, full description > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--bravo value)... [--charlie c] (--delta) <args>...
  prefix --help

Longer description of this command's behavior, only printed during --help

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, full description > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--bravo value)... [--charlie c] (--delta) <args>...
  prefix --help

Longer description of this command's behavior, only printed during --help

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, full description, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--bravo value)... (--delta) <args>...
  prefix --help

Longer description of this command's behavior, only printed during --help

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, full description, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--bravo value)... (--delta) <args>...
  prefix --help

Longer description of this command's behavior, only printed during --help

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, help all, force alias in usage line > no ANSI color 1`] = `
"USAGE
  prefix (-a value) (--bravo value)... [--charlie c] (-d) <args>...
  prefix -h
  prefix -H

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit
  -H  --helpAll          Print help information (including hidden commands/flags) and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, help all, force alias in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (-a value) (--bravo value)... [--charlie c] (-d) <args>...
  prefix -h
  prefix -H

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m
  [90m-H[39m [90m --helpAll[39m          [90mPrint help information (including hidden commands/flags) and exit[39m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, mixed custom usage > no ANSI color 1`] = `
"USAGE
  prefix -a 1
    enhanced usage line #1
  prefix normal custom usage A
  prefix normal custom usage B
  prefix -a 2 -d
    enhanced usage line #2
  prefix normal custom usage C
  prefix normal custom usage D
  prefix --help

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, mixed custom usage > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix -a 1
    [3menhanced usage line #1[23m
  prefix normal custom usage A
  prefix normal custom usage B
  prefix -a 2 -d
    [3menhanced usage line #2[23m
  prefix normal custom usage C
  prefix normal custom usage D
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--bravo value)... (--delta) <arg1>
  prefix --help

brief

FLAGS
  -a  --alpha            alpha flag brief
      --bravo...         bravo flag brief
     [--charlie]         charlie flag brief
  -d  --delta/--noDelta  delta flag brief
  -h  --help             Print help information and exit

ARGUMENTS
   arg1   first argument brief
  [arg2]  second argument brief
"
`;

exports[`Command > printHelp > mixed parameters, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--bravo value)... (--delta) <arg1>
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m --alpha[22m            [03malpha flag brief[23m
  [01m[22m   [01m --bravo...[22m         [03mbravo flag brief[23m
  [01m[22m   [01m[--charlie][22m         [03mcharlie flag brief[23m
  [01m-d[22m [01m --delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m --help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [1m arg1[22m   [3mfirst argument brief[23m
  [1m[arg2][22m  [3msecond argument brief[23m
"
`;

exports[`Command > printHelp > mixed parameters, skips hidden > no ANSI color 1`] = `
"USAGE
  prefix (--alpha value) (--delta) <args>...
  prefix --help

brief

FLAGS
  -a --alpha            alpha flag brief
  -d --delta/--noDelta  delta flag brief
  -h --help             Print help information and exit

ARGUMENTS
  args...  string array brief
"
`;

exports[`Command > printHelp > mixed parameters, skips hidden > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha value) (--delta) <args>...
  prefix --help

brief

[1mFLAGS[22m
  [01m-a[22m [01m--alpha[22m            [03malpha flag brief[23m
  [01m-d[22m [01m--delta/--noDelta[22m  [03mdelta flag brief[23m
  [01m-h[22m [01m--help[22m             [03mPrint help information and exit[23m

[1mARGUMENTS[22m
  [01margs...[22m  [3mstring array brief[23m
"
`;

exports[`Command > printHelp > multiple boolean flags > no ANSI color 1`] = `
"USAGE
  prefix (--alpha) [--bravo] (--charlie)
  prefix --help

brief

FLAGS
      --alpha/--noAlpha      alpha flag brief
     [--bravo/--noBravo]     bravo flag brief
  -c  --charlie/--noCharlie  charlie flag brief
  -h  --help                 Print help information and exit
"
`;

exports[`Command > printHelp > multiple boolean flags > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha) [--bravo] (--charlie)
  prefix --help

brief

[1mFLAGS[22m
  [01m[22m   [01m --alpha/--noAlpha[22m      [03malpha flag brief[23m
  [01m[22m   [01m[--bravo/--noBravo][22m     [03mbravo flag brief[23m
  [01m-c[22m [01m --charlie/--noCharlie[22m  [03mcharlie flag brief[23m
  [01m-h[22m [01m --help[22m                 [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > multiple boolean flags, kebab-case > no ANSI color 1`] = `
"USAGE
  prefix (--alpha) [--bravo] (--charlie)
  prefix --help

brief

FLAGS
      --alpha/--no-alpha      alpha flag brief
     [--bravo/--no-bravo]     bravo flag brief
  -c  --charlie/--no-charlie  charlie flag brief
  -h  --help                  Print help information and exit
"
`;

exports[`Command > printHelp > multiple boolean flags, kebab-case > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha) [--bravo] (--charlie)
  prefix --help

brief

[1mFLAGS[22m
  [01m[22m   [01m --alpha/--no-alpha[22m      [03malpha flag brief[23m
  [01m[22m   [01m[--bravo/--no-bravo][22m     [03mbravo flag brief[23m
  [01m-c[22m [01m --charlie/--no-charlie[22m  [03mcharlie flag brief[23m
  [01m-h[22m [01m --help[22m                  [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > multiple boolean flags, kebab-case, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alpha) (--charlie)
  prefix --help

brief

FLAGS
      --alpha/--no-alpha      alpha flag brief
     [--bravo/--no-bravo]     bravo flag brief
  -c  --charlie/--no-charlie  charlie flag brief
  -h  --help                  Print help information and exit
"
`;

exports[`Command > printHelp > multiple boolean flags, kebab-case, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha) (--charlie)
  prefix --help

brief

[1mFLAGS[22m
  [01m[22m   [01m --alpha/--no-alpha[22m      [03malpha flag brief[23m
  [01m[22m   [01m[--bravo/--no-bravo][22m     [03mbravo flag brief[23m
  [01m-c[22m [01m --charlie/--no-charlie[22m  [03mcharlie flag brief[23m
  [01m-h[22m [01m --help[22m                  [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > multiple boolean flags, only required in usage line > no ANSI color 1`] = `
"USAGE
  prefix (--alpha) (--charlie)
  prefix --help

brief

FLAGS
      --alpha/--noAlpha      alpha flag brief
     [--bravo/--noBravo]     bravo flag brief
  -c  --charlie/--noCharlie  charlie flag brief
  -h  --help                 Print help information and exit
"
`;

exports[`Command > printHelp > multiple boolean flags, only required in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix (--alpha) (--charlie)
  prefix --help

brief

[1mFLAGS[22m
  [01m[22m   [01m --alpha/--noAlpha[22m      [03malpha flag brief[23m
  [01m[22m   [01m[--bravo/--noBravo][22m     [03mbravo flag brief[23m
  [01m-c[22m [01m --charlie/--noCharlie[22m  [03mcharlie flag brief[23m
  [01m-h[22m [01m --help[22m                 [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > no parameters > no ANSI color 1`] = `
"USAGE
  prefix
  prefix --help

brief

FLAGS
  -h --help  Print help information and exit
"
`;

exports[`Command > printHelp > no parameters > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix
  prefix --help

brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m  [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > no parameters, dropped empty flag spec > no ANSI color 1`] = `
"USAGE
  prefix
  prefix --help

brief

FLAGS
  -h --help  Print help information and exit
"
`;

exports[`Command > printHelp > no parameters, dropped empty flag spec > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix
  prefix --help

brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m  [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > no parameters, dropped empty positional spec > no ANSI color 1`] = `
"USAGE
  prefix
  prefix --help

brief

FLAGS
  -h --help  Print help information and exit
"
`;

exports[`Command > printHelp > no parameters, dropped empty positional spec > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix
  prefix --help

brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m  [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > no parameters, dropped empty specs > no ANSI color 1`] = `
"USAGE
  prefix
  prefix --help

brief

FLAGS
  -h --help  Print help information and exit
"
`;

exports[`Command > printHelp > no parameters, dropped empty specs > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix
  prefix --help

brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m  [03mPrint help information and exit[23m
"
`;

exports[`Command > printHelp > no parameters, help all, force alias in usage line > no ANSI color 1`] = `
"USAGE
  prefix
  prefix -h
  prefix -H

brief

FLAGS
  -h --help     Print help information and exit
  -H --helpAll  Print help information (including hidden commands/flags) and exit
"
`;

exports[`Command > printHelp > no parameters, help all, force alias in usage line > with ANSI color 1`] = `
"[1mUSAGE[22m
  prefix
  prefix -h
  prefix -H

brief

[1mFLAGS[22m
  [01m-h[22m [01m--help[22m     [03mPrint help information and exit[23m
  [90m-H[39m [90m--helpAll[39m  [90mPrint help information (including hidden commands/flags) and exit[39m
"
`;

exports[`Command > run > command function returns error > with custom exit code 1`] = `
ExitCode=Unknown(10)
:: STDOUT

:: STDERR
This action purposefully throws an error

`;

exports[`Command > run > command function returns error > with default exit code 1`] = `
ExitCode=CommandRunError
:: STDOUT

:: STDERR
This action purposefully throws an error

`;

exports[`Command > run > command function returns error > with default exit code, ansi color 1`] = `
ExitCode=CommandRunError
:: STDOUT

:: STDERR
[1m[31mThis action purposefully throws an error[39m[22m

`;

exports[`Command > run > command function throws error > with custom exit code 1`] = `
ExitCode=Unknown(10)
:: STDOUT

:: STDERR
Command failed, Error: This action purposefully throws an error

`;

exports[`Command > run > command function throws error > with default exit code 1`] = `
ExitCode=CommandRunError
:: STDOUT

:: STDERR
Command failed, Error: This action purposefully throws an error

`;

exports[`Command > run > command function throws error > with default exit code, ansi color 1`] = `
ExitCode=CommandRunError
:: STDOUT

:: STDERR
[1m[31mCommand failed, Error: This action purposefully throws an error[39m[22m

`;

exports[`Command > run > doNothing (loader returns function) > no inputs 1`] = `
ExitCode=Success
:: STDOUT

:: STDERR

`;

exports[`Command > run > doNothing (loader returns function) > unexpected input argument 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
Too many arguments, expected 0 but encountered "foo"

`;

exports[`Command > run > doNothing (loader returns function) > unexpected input flag 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
No flag registered for --foo

`;

exports[`Command > run > doNothing > no inputs 1`] = `
ExitCode=Success
:: STDOUT

:: STDERR

`;

exports[`Command > run > doNothing > unexpected input argument 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
Too many arguments, expected 0 but encountered "foo"

`;

exports[`Command > run > doNothing > unexpected input argument, with ansi color 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
[1m[31mToo many arguments, expected 0 but encountered "foo"[39m[22m

`;

exports[`Command > run > doNothing > unexpected input flag 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
No flag registered for --foo

`;

exports[`Command > run > doNothing > unexpected input flag, with ansi color 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
[1m[31mNo flag registered for --foo[39m[22m

`;

exports[`Command > run > echoArguments > multiple input arguments 1`] = `
ExitCode=Success
:: STDOUT
foo
bar
:: STDERR

`;

exports[`Command > run > echoArguments > no inputs 1`] = `
ExitCode=Success
:: STDOUT

:: STDERR

`;

exports[`Command > run > echoArguments > single input argument 1`] = `
ExitCode=Success
:: STDOUT
foo
:: STDERR

`;

exports[`Command > run > echoArguments > unexpected error 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
Unable to parse arguments, Error: Unexpected error thrown by input
    at Object.toString (#/tests/routing/command.spec.ts:?:?)
    at RegExp.exec (<anonymous>)
    at findFlagByArgumentWithInput (#/src/parameter/scanner.ts:?:?)
    at Object.next (#/src/parameter/scanner.ts:?:?)
    at runCommand (#/src/routing/command/run.ts:?:?)
    at runWithInputs (#/tests/routing/command.spec.ts:?:?)
    at #/tests/routing/command.spec.ts:?:?

`;

exports[`Command > run > echoArguments > unexpected error, with ansi color 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
[1m[31mUnable to parse arguments, Error: Unexpected error thrown by input
    at Object.toString (#/tests/routing/command.spec.ts:?:?)
    at RegExp.exec (<anonymous>)
    at findFlagByArgumentWithInput (#/src/parameter/scanner.ts:?:?)
    at Object.next (#/src/parameter/scanner.ts:?:?)
    at runCommand (#/src/routing/command/run.ts:?:?)
    at runWithInputs (#/tests/routing/command.spec.ts:?:?)
    at #/tests/routing/command.spec.ts:?:?

`;

exports[`Command > run > fails to load command module 1`] = `
ExitCode=CommandLoadError
:: STDOUT

:: STDERR
Unable to load command function, Error: This command load purposefully throws an error
    at loader (#/tests/routing/command.spec.ts:?:?)
    at runCommand (#/src/routing/command/run.ts:?:?)
    at runWithInputs (#/tests/routing/command.spec.ts:?:?)
    at #/tests/routing/command.spec.ts:?:?

`;

exports[`Command > run > fails to load command module, with ansi color 1`] = `
ExitCode=CommandLoadError
:: STDOUT

:: STDERR
[1m[31mUnable to load command function, Error: This command load purposefully throws an error
    at loader (#/tests/routing/command.spec.ts:?:?)
    at runCommand (#/src/routing/command/run.ts:?:?)
    at runWithInputs (#/tests/routing/command.spec.ts:?:?)
    at #/tests/routing/command.spec.ts:?:?

`;

exports[`Command > run > fails to parse invalid parameter 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
Failed to parse "nope" for arg1: Cannot convert nope to a boolean

`;

exports[`Command > run > fails to scan missing flags 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
Expected input for flag --foo
Expected input for flag --bar

`;

exports[`Command > run > fails to scan missing flags, with ansi color 1`] = `
ExitCode=InvalidArgument
:: STDOUT

:: STDERR
[1m[31mExpected input for flag --foo[39m[22m
[1m[31mExpected input for flag --bar[39m[22m

`;
